clusters/labinfra/apps/cronicle.xuperson.org/cronicle-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cronicle
  labels:
    app.kubernetes.io/name: cronicle
    app.kubernetes.io/managed-by: flux
