clusters/labinfra/apps/cronicle.xuperson.org/cronicle-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cronicle
  namespace: cronicle
  labels:
    app: cronicle
spec:
  selector:
    app: cronicle
  ports:
  - name: http
    port: 80
    targetPort: 3012
    protocol: TCP
  type: ClusterIP
